@@ -52,7 +52,7 @@ public class Consolidation {
         this.cntManager = cntManager;
         //client = new CrossrefClient();
         client = CrossrefClient.getInstance();
-        workDeserializer = new WorkDeserializer();
+        workDeserializer = new WorkDeserializer();        
     }
 
     /**
@@ -94,7 +94,7 @@ public class Consolidation {
 
 
     /**
-     * Try to consolidate one bibliographical object with crossref web services based on
+     * Try to consolidate one bibliographical object with crossref metadata lookup web services based on
      * core metadata
      */
     public boolean consolidate(BiblioItem bib, List<BiblioItem> additionalBiblioInformation) throws Exception {
@@ -131,7 +131,7 @@ public class Consolidation {
         if (journalTitle != null) {
             journalTitle = TextUtilities.removeAccents(journalTitle);
         }
-        if (cntManager != null)
+        if (cntManager != null) 
             cntManager.i(ConsolidationCounters.CONSOLIDATION);
 
         try {
@@ -150,8 +150,6 @@ public class Consolidation {
                     valid = consolidateCrossrefGetByAuthorTitleLibrary(aut, title, bib, additionalBiblioInformation);
                 }*/
             }
-
-
 
             /*if (!valid && StringUtils.isNotBlank(journalTitle)
                     && StringUtils.isNotBlank(volume)
@@ -173,7 +171,8 @@ public class Consolidation {
                     volume, bib, additionalBiblioInformation);
             }*/
         } catch (Exception e) {
-            throw new GrobidException("An exception occured while running Grobid consolidation.", e);
+            //throw new GrobidException("An exception occured while running Grobid consolidation.", e);
+            LOGGER.warn("An exception occured while running Grobid consolidation.", e);
         }
 
         if (valid && (cntManager != null))
@@ -181,32 +180,177 @@ public class Consolidation {
         return valid;
     }
 
+    /**
+     * Try to consolidate one bibliographical object with crossref metadata lookup web services based on
+     * core metadata
+     */
+    public BiblioItem consolidate(BiblioItem bib, String rawCitation) throws Exception {
+        final List<BiblioItem> results = new ArrayList<BiblioItem>();
+
+        String doi = bib.getDOI();
+        String aut = bib.getFirstAuthorSurname();
+        String title = bib.getTitle();
+        String journalTitle = bib.getJournal();
+        String volume = bib.getVolume();
+        if (StringUtils.isBlank(volume))
+            volume = bib.getVolumeBlock();
+
+        String firstPage = null;
+        String pageRange = bib.getPageRange();
+        int beginPage = bib.getBeginPage();
+        if (beginPage != -1) {
+            firstPage = "" + beginPage;
+        } else if (pageRange != null) {
+            StringTokenizer st = new StringTokenizer(pageRange, "--");
+            if (st.countTokens() == 2) {
+                firstPage = st.nextToken();
+            } else if (st.countTokens() == 1)
+                firstPage = pageRange;
+        }
+
+        if (aut != null) {
+            aut = TextUtilities.removeAccents(aut);
+        }
+        if (title != null) {
+            title = TextUtilities.removeAccents(title);
+        }
+        if (journalTitle != null) {
+            journalTitle = TextUtilities.removeAccents(journalTitle);
+        }
+        if (cntManager != null) 
+            cntManager.i(ConsolidationCounters.CONSOLIDATION);
+
+        long threadId = Thread.currentThread().getId();
+        Map<String, String> arguments = null;
+
+        if (StringUtils.isNotBlank(doi)) {
+            // call based on the identified DOI
+            arguments = null;
+        } /*else if (StringUtils.isNotBlank(title) && StringUtils.isNotBlank(aut)) {
+            // call based on partial metadata
+            doi = null;
+            arguments = new HashMap<String,String>();
+            arguments.put("query.title", title);
+            arguments.put("query.author", aut);
+            if (StringUtils.isNotBlank(journalTitle))
+                 arguments.put("query.container-title", journalTitle);
+
+            arguments.put("rows", "1"); // we just request the top-one result
+        }*/ else if (StringUtils.isNotBlank(rawCitation)) {
+            // call with full raw string
+            doi = null;
+            arguments = new HashMap<String,String>();
+            arguments.put("query.bibliographic", rawCitation);
+            //arguments.put("query", rawCitation);
+            arguments.put("rows", "1");
+        }
+
+        if ((doi == null) && (arguments == null)) {
+            return null;
+        }
+
+        /*if (StringUtils.isNotBlank(doi)) {
+            // retrieval per DOI
+            //System.out.println("test retrieval per DOI");
+            valid = consolidateCrossrefGetByDOI(bib, additionalBiblioInformation);
+        }  
+        if (!valid && StringUtils.isNotBlank(title)
+                && StringUtils.isNotBlank(aut)) {
+            // retrieval per first author and article title
+            //additionalBiblioInformation.clear();
+            valid = consolidateCrossrefGetByAuthorTitle(aut, title, bib, additionalBiblioInformation);
+        }*/
+
+        final boolean doiQuery;
+        try {
+            //CrossrefRequestListener<BiblioItem> requestListener = new CrossrefRequestListener<BiblioItem>();
+            if (cntManager != null) {
+                cntManager.i(ConsolidationCounters.CONSOLIDATION);
+            }
+
+            if ( (doi != null) && (cntManager != null) ) {
+                cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI);
+                doiQuery = true;
+            } else {
+                doiQuery = false;
+            }
+
+            client.<BiblioItem>pushRequest("works", doi, arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>(0) {
+                
+                @Override
+                public void onSuccess(List<BiblioItem> res) {
+                    //System.out.println("Success request "+id);
+                    //System.out.println("size of results: " + res.size());
+                    if ((res != null) && (res.size() > 0) ) {
+                        // we need here to post-check that the found item corresponds
+                        // correctly to the one requested in order to avoid false positive
+                        for(BiblioItem oneRes : res) {
+                            if (postValidation(bib, oneRes)) {
+                                results.add(oneRes);
+                                if (cntManager != null) {
+                                    cntManager.i(ConsolidationCounters.CONSOLIDATION_SUCCESS);
+                                    if (doiQuery)
+                                        cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI_SUCCESS);
+                                }
+                                break;
+                            }
+                        }
+                    } 
+                }
+
+                @Override
+                public void onError(int status, String message, Exception exception) {
+                    LOGGER.warn("CrossRef returns error ("+status+") : "+message);
+                    //System.out.println("ERROR ("+status+") : "+message);
+                    //exception.printStackTrace();
+                }
+            });
+        } catch(Exception e) {
+            LOGGER.warn("Consolidation error - " + ExceptionUtils.getStackTrace(e));
+            //results.put(Integer.valueOf(id), null);
+        } 
+
+        client.finish(threadId);
+        if (results.size() == 0)
+            return null;
+        else
+            return results.get(0);
+    }
+
 
     /**
-     * Try tp consolidate a list of bibliographical objects in one operation with CrossRef web services
+     * Try tp consolidate a list of bibliographical objects in one operation with CrossRef REST API services
      */
-    public Map<Integer,BiblioItem> consolidate(List<BibDataSet> biblios) {    
+    public Map<Integer,BiblioItem> consolidate(List<BibDataSet> biblios) {   
         if (CollectionUtils.isEmpty(biblios))
             return null;
-
         final Map<Integer,BiblioItem> results = new HashMap<Integer,BiblioItem>();
         // init the results
         int n = 0;
         for(n=0; n<biblios.size(); n++) {
-            results.put(new Integer(n), null);
+            results.put(Integer.valueOf(n), null);
         }
         n = 0;
         long threadId = Thread.currentThread().getId();
         for(BibDataSet bibDataSet : biblios) {
             final BiblioItem theBiblio = bibDataSet.getResBib();
 
+            if (cntManager != null) 
+                cntManager.i(ConsolidationCounters.TOTAL_BIB_REF);
+
             // first we get the exploitable metadata
             String doi = theBiblio.getDOI();
+            if (StringUtils.isNotBlank(doi)) {
+                doi = cleanDoi(doi);
+            }
             String aut = theBiblio.getFirstAuthorSurname();
             String title = theBiblio.getTitle();
             String journalTitle = theBiblio.getJournal();
            
-            if (aut != null) {
+            // and the row string
+            String rawCitation = bibDataSet.getRawBib();
+
+            /*if (aut != null) {
                 aut = TextUtilities.removeAccents(aut);
             }
             if (title != null) {
@@ -214,7 +358,7 @@ public class Consolidation {
             }
             if (journalTitle != null) {
                 journalTitle = TextUtilities.removeAccents(journalTitle);
-            }
+            }*/
 
             Map<String, String> arguments = null;
 
@@ -223,9 +367,8 @@ public class Consolidation {
 
             if (StringUtils.isNotBlank(doi)) {
                 // call based on the identified DOI
-                doi = cleanDoi(doi);
                 arguments = null;
-            } else if (StringUtils.isNotBlank(title) && StringUtils.isNotBlank(aut)) {
+            } /*else if (StringUtils.isNotBlank(title) && StringUtils.isNotBlank(aut)) {
                 // call based on partial metadata
                 doi = null;
                 arguments = new HashMap<String,String>();
@@ -235,16 +378,35 @@ public class Consolidation {
                      arguments.put("query.container-title", journalTitle);
 
                 arguments.put("rows", "1"); // we just request the top-one result
-            } 
+            }*/ else if (StringUtils.isNotBlank(rawCitation)) {
+                // call with full raw string
+                doi = null;
+                arguments = new HashMap<String,String>();
+                arguments.put("query.bibliographic", rawCitation);
+                //arguments.put("query", rawCitation);
+                arguments.put("rows", "1");
+            }
 
             if ((doi == null) && (arguments == null)) {
-                //results.put(new Integer(n), null);
+                //results.put(Integer.valueOf(n), null);
                 n++;
                 continue;
             }
 
+            final boolean doiQuery;
             try {
                 //CrossrefRequestListener<BiblioItem> requestListener = new CrossrefRequestListener<BiblioItem>();
+                if (cntManager != null) {
+                    cntManager.i(ConsolidationCounters.CONSOLIDATION);
+                }
+
+                if ( (doi != null) && (cntManager != null) ) {
+                    cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI);
+                    doiQuery = true;
+                } else {
+                    doiQuery = false;
+                }
+
                 client.<BiblioItem>pushRequest("works", doi, arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>(n) {
                     
                     @Override
@@ -256,7 +418,12 @@ public class Consolidation {
                             // correctly to the one requested in order to avoid false positive
                             for(BiblioItem oneRes : res) {
                                 if (postValidation(theBiblio, oneRes)) {
-                                    results.put(new Integer(getRank()), oneRes);
+                                    results.put(Integer.valueOf(getRank()), oneRes);
+                                    if (cntManager != null) {
+                                        cntManager.i(ConsolidationCounters.CONSOLIDATION_SUCCESS);
+                                        if (doiQuery)
+                                            cntManager.i(ConsolidationCounters.CONSOLIDATION_PER_DOI_SUCCESS);
+                                    }
                                     break;
                                 }
                             }
@@ -265,14 +432,14 @@ public class Consolidation {
 
                     @Override
                     public void onError(int status, String message, Exception exception) {
-                        LOGGER.info("ERROR ("+status+") : "+message);
-                        System.out.println("ERROR ("+status+") : "+message);
+                        LOGGER.warn("CrossRef returns error ("+status+") : "+message);
+                        //System.out.println("ERROR ("+status+") : "+message);
                         //exception.printStackTrace();
                     }
                 });
             } catch(Exception e) {
-                LOGGER.error("Consolidation error - " + ExceptionUtils.getStackTrace(e));
-                //results.put(new Integer(id), null);
+                LOGGER.warn("Consolidation error - " + ExceptionUtils.getStackTrace(e));
+                //results.put(Integer.valueOf(id), null);
             } 
             n++;
         }
@@ -300,7 +467,7 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
     }
 
     /**
-     * Try to consolidate some uncertain bibliographical data with crossref web service based on
+     * Try to consolidate some uncertain bibliographical data with crossref REST API service based on
      * the DOI if it is around
      *
      * @param biblio the Biblio item to be consolidated
@@ -329,17 +496,17 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                 try {
                     requestListener.wait(5000); // timeout after 5 seconds
                 } catch (InterruptedException e) {
-                    LOGGER.error("Timeout error - " + ExceptionUtils.getStackTrace(e));
+                    LOGGER.warn("Timeout error - " + ExceptionUtils.getStackTrace(e));
                 }
             }
             
             CrossrefRequestListener.Response<BiblioItem> response = requestListener.getResponse();
             
             if (response == null)
-                LOGGER.error("No response ! Maybe timeout.");
+                LOGGER.warn("No response ! Maybe timeout.");
             
             else if (response.hasError() || !response.hasResults())
-                LOGGER.error("error: ("+response.status+") : "+response.errorMessage);
+                LOGGER.warn("CrossRef returns error ("+response.status+") : "+response.errorMessage);
             
             else { // success
                 LOGGER.info("Success request "+ doi);
@@ -380,6 +547,8 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
             
             long threadId = Thread.currentThread().getId();
             CrossrefRequestListener<BiblioItem> requestListener = new CrossrefRequestListener<BiblioItem>();
+            if (cntManager != null) 
+                cntManager.i(ConsolidationCounters.CONSOLIDATION);
             client.<BiblioItem>pushRequest("works", null, arguments, workDeserializer, threadId, new CrossrefRequestListener<BiblioItem>() {
                 
                 @Override
@@ -390,6 +559,8 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                         // correctly to the one requested in order to avoid false positive
                         for(BiblioItem oneRes : res) {
                             if (postValidation(biblio, oneRes)) {
+                                if (cntManager != null) 
+                                    cntManager.i(ConsolidationCounters.CONSOLIDATION_SUCCESS);
                                 bib2.add(oneRes);
                             }
                         }
@@ -398,7 +569,7 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
 
                 @Override
                 public void onError(int status, String message, Exception exception) {
-                    LOGGER.info("ERROR ("+status+") : "+message);
+                    LOGGER.warn("CrossRef returns error ("+status+") : "+message);
                 }
             });
 
@@ -433,9 +604,9 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                 }
             }*/
 
-            for(BiblioItem bib : bib2) {
+            //for(BiblioItem bib : bib2) {
                 //System.out.println(bib.toTEI(0));
-            }
+            //}
 
             /*String subpath = String.format(TITLE_BASE_QUERY,
                     GrobidProperties.getInstance().getCrossrefId(),
@@ -522,7 +693,8 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                     urlConn = (HttpURLConnection) url.openConnection();
                 } catch (Exception e2) {
                     urlConn = null;
-                    throw new GrobidException("An exception occured while running Grobid.", e2);
+                    //throw new GrobidException("An exception occured while running Grobid.", e2);
+                    LOGGER.warn("Connection to CrossRef fails!");
                 }
             }
             if (urlConn != null) {
@@ -552,8 +724,7 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                             result = true;
                     }
                 } catch (Exception e) {
-                    LOGGER.error("Warning: Consolidation set true, " +
-                            "but the online connection to Crossref fails.");
+                    LOGGER.warn("Consolidation set true, but the online connection to Crossref fails.");
                 } finally {
                     urlConn.disconnect();
                 }
@@ -613,7 +784,8 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                     urlConn = (HttpURLConnection) url.openConnection();
                 } catch (Exception e2) {
                     urlConn = null;
-                    throw new GrobidException("An exception occured while running Grobid.", e2);
+                    //throw new GrobidException("An exception occured while running Grobid.", e2);
+                    LOGGER.warn("Connection to CrossRef fails!");
                 }
             }
             if (urlConn != null) {
@@ -643,8 +815,7 @@ System.out.println("total (CrossRef JSON search API): " + consolidated + " / " +
                         result = true;
                     }
                 } catch (Exception e) {
-                    LOGGER.error("Warning: Consolidation set true, " +
-                            "but the online connection to Crossref fails.");
+                    LOGGER.warn("Consolidation set true, but the online connection to Crossref fails.");
                 } finally {
                     IOUtils.closeQuietly(in);
                     urlConn.disconnect();
